--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
         createToast(text) {
           this.text = 'Click: '+text;
           this.snackbar = true;
+          if (text = 'Cube_6') {
+            window.open('http://www.peretec.com', '_blank');
+          }
         }
       }
     });
